[gd_scene load_steps=3 format=3 uid="uid://02n5el7bap5r"]

[ext_resource type="Script" uid="uid://31wu7f4vmesd" path="res://ui/game/hud/merchant_hud.gd" id="1_yj2p2"]
[ext_resource type="PackedScene" path="res://ui/game/hud/SharedTooltipPanel.tscn" id="2_2u4xq"]

[node name="MerchantHUD" type="CanvasLayer"]
script = ExtResource("1_yj2p2")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TooltipPanel" parent="Root" instance=ExtResource("2_2u4xq")]
z_index = 50

[node name="QtyDialog" type="Panel" parent="Root"]
visible = false
custom_minimum_size = Vector2(260, 140)
offset_left = 40.0
offset_top = 40.0
offset_right = 300.0
offset_bottom = 180.0

[node name="QtyTitle" type="Label" parent="Root/QtyDialog"]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 240.0
offset_bottom = 30.0
text = "Купить"

[node name="QtySlider" type="HSlider" parent="Root/QtyDialog"]
layout_mode = 0
offset_left = 10.0
offset_top = 36.0
offset_right = 240.0
offset_bottom = 60.0

[node name="QtyPrice" type="Label" parent="Root/QtyDialog"]
layout_mode = 0
offset_left = 10.0
offset_top = 64.0
offset_right = 240.0
offset_bottom = 86.0
text = "Цена: 0"

[node name="QtyOk" type="Button" parent="Root/QtyDialog"]
layout_mode = 0
offset_left = 10.0
offset_top = 94.0
offset_right = 90.0
offset_bottom = 120.0
text = "Ок"

[node name="QtyCancel" type="Button" parent="Root/QtyDialog"]
layout_mode = 0
offset_left = 100.0
offset_top = 94.0
offset_right = 190.0
offset_bottom = 120.0
text = "Отмена"

[node name="Panel" type="Panel" parent="Root"]
visible = false
custom_minimum_size = Vector2(385, 585)
offset_left = 10.0
offset_top = 10.0
offset_right = 395.0
offset_bottom = 595.0

[node name="Title" type="Label" parent="Root/Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 260.0
offset_bottom = 30.0
text = "Торговля"

[node name="CloseButton" type="Button" parent="Root/Panel"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 350.0
offset_top = 5.0
offset_right = 380.0
offset_bottom = 36.0
text = "×"

[node name="ItemCellTemplate" type="Panel" parent="Root/Panel"]
visible = false
custom_minimum_size = Vector2(350, 75)
layout_mode = 0
offset_left = 12.0
offset_top = 80.0
offset_right = 252.0
offset_bottom = 132.0

[node name="Padding" type="MarginContainer" parent="Root/Panel/ItemCellTemplate"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Content" type="HBoxContainer" parent="Root/Panel/ItemCellTemplate/Padding"]
custom_minimum_size = Vector2(340, 65)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="IconPanel" type="Panel" parent="Root/Panel/ItemCellTemplate/Padding/Content"]
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
size_flags_vertical = 4

[node name="Icon" type="TextureRect" parent="Root/Panel/ItemCellTemplate/Padding/Content/IconPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 2
stretch_mode = 5

[node name="Name" type="Label" parent="Root/Panel/ItemCellTemplate/Padding/Content"]
custom_minimum_size = Vector2(170, 65)
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 2
clip_text = true

[node name="ActionButton" type="Button" parent="Root/Panel/ItemCellTemplate/Padding/Content"]
custom_minimum_size = Vector2(95, 65)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="ActionText" type="RichTextLabel" parent="Root/Panel/ItemCellTemplate/Padding/Content/ActionButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "Купить"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="Tabs" type="TabContainer" parent="Root/Panel"]
custom_minimum_size = Vector2(360, 535)
layout_mode = 0
offset_left = 12.0
offset_top = 38.0
offset_right = 372.0
offset_bottom = 569.0
current_tab = 1

[node name="Покупка" type="Control" parent="Root/Panel/Tabs"]
visible = false
custom_minimum_size = Vector2(360, 500)
layout_mode = 2
metadata/_tab_index = 0

[node name="Scroll" type="ScrollContainer" parent="Root/Panel/Tabs/Покупка"]
custom_minimum_size = Vector2(360, 500)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Root/Panel/Tabs/Покупка/Scroll"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="Grid" type="GridContainer" parent="Root/Panel/Tabs/Покупка/Scroll/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5

[node name="Продажа" type="Control" parent="Root/Panel/Tabs"]
custom_minimum_size = Vector2(360, 500)
layout_mode = 2
metadata/_tab_index = 1

[node name="Scroll" type="ScrollContainer" parent="Root/Panel/Tabs/Продажа"]
custom_minimum_size = Vector2(360, 500)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Root/Panel/Tabs/Продажа/Scroll"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="Grid" type="GridContainer" parent="Root/Panel/Tabs/Продажа/Scroll/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
